# StarFish-MathLib

./: .gitignore  CMakeLists.txt  ECG.txt  FFT.cpp  FFT.h  LICENSE  README.txt  RRs.txt  SFMathCAPI.cpp  SFMathCAPI.h  SFMath_Interface.cs  library.h
CubicSpline/: CMakeLists.txt  CubicSpline.cpp  CubicSpline.h  CubicSpline_CAPI.cpp  CubicSpline_CAPI.h
FFT/: CMakeLists.txt  FFT.cpp  FFT.h  FFT_CAPI.cpp  FFT_CAPI.h  complex.cpp  complex.h  cppFFT.cpp  cppFFT.h
PanTompkins/: CMakeLists.txt  PanTompkins.cpp  PanTompkins.h  PanTompkins_CAPI.cpp  PanTompkins_CAPI.h
SFMathConsole/: CMakeLists.txt  SFMathConsole.cpp  SFMathConsole.h
